# icfpc2017-tbd

./: .gitignore  Dockerfile  Makefile  README.md  punter_setup.md  rebuild_tbd_python.sh  requirements.txt  run_lamduct.sh
fj_scratch/: stuff.py
julie_scratch/: .gitignore  allpastmoves_example.json  map_analyzer.py  scorecalculator.py  test_me.py  visualisation.py  visualization.py
manpages_scratch/: Makefile  dub.sdl  dub.selections.json  manpages_scratch
manpages_scratch/D/: .gitignore
manpages_scratch/ags/: .gitignore  REQUIREMENTS.txt  ags.cabal
manpages_scratch/ags/app/: Database.hs  Main.hs  Pages.hs
manpages_scratch/ags/data/maps/: 20000  37797
manpages_scratch/ags/data/scores/20000/: 2017-08-06 23:26:12.812663 UTC
manpages_scratch/ags/src/Punter/: Actions.hs  Aeson.hs  Database.hs  Game.hs  Map.hs  TCPTransport.hs
manpages_scratch/source/: app.d  config.d  networking.d
outputs/: README.md
pi_scratch/: scraper.py
pi_scratch/scripts/: punter_debug
production/: bot_interface.py  botscript.py  comms.py  cpp_bot.py  cpp_utils.py  dumb_bots.py  dumb_rand_bots.py  json_format.py  json_format_test.py  malicious_bot.py  mass_runner.py  match_history.py  online_client.py  punter.py  scraper.py  smoketest_bots.py  testing_bot.py  utils.py  visualization.py
production/cpp/: __init__.py  bindings_test.py  glue.py  stuff.cpp
production/server/: .gitignore  config.py.example  connection.py  connection_test.py  connector.py  db_connection.py  gameloop.py  (+9 more)
scripts/: README  install  punter
server/: .gitignore  gameholder.py  json_format.py  server_interface.py  stuff.cpp  test_gameholder.py
vlad_scratch/: benchmark.py  online_client.py
(+25 files in other folders)
